--- a/app/views/papers/_search_form.html.erb
+++ b/app/views/papers/_search_form.html.erb
@@ -1,14 +1,20 @@
 <div class='paper-search-form'>
-  <div class='form-title'>登録したい論文を探す</div>
+  <div class='form-title'>抄読会.com内の論文を検索する</div>
   <%= form_tag papers_path, method: :get do %>
     <p>
-      <%= text_field_tag :term, params[:term], required: true, class: 'keyword-input', placeholder: 'キーワード' %>
+      <%= text_field_tag :keyword, params[:keyword], class: 'keyword-input', placeholder: 'キーワード (pubmed id も可)' %>
     </p>
     <p>
       <%= label_tag :min_date, '出版年月日' %>
       <%= date_field_tag :min_date, params[:min_date], class: 'mindate-input' %>
       から
       <%= date_field_tag :max_date, params[:max_date], class: 'maxdate-input' %>
+    </p>
+    <p>
+      <%= text_field_tag :author_name, params[:author_name], class: 'authorname-input', placeholder: '著者名' %>
+    </p>
+    <p>
+      <%= text_field_tag :journal_name, params[:journal_name], class: 'journalname-input', placeholder: '誌名' %>
       <%= submit_tag "検索する", name: nil, class: 'submit-btn flat-button-identity2', data: {disable_with: '検索中...'} %>
     </p>
   <% end %>
