--- a/app/views/sidebar/_menu.html.erb
+++ b/app/views/sidebar/_menu.html.erb
@@ -5,7 +5,7 @@
   <%= link_to paper_lists_path, class: 'button favorite-paper flat-button-identity2' do %>
     <i class="fa fa-list"></i>抄読会(論文リスト)一覧
   <% end %>
-  <%= link_to search_papers_path, class: 'button search-paper flat-button-identity1' do %>
+  <%= link_to papers_path, class: 'button search-paper flat-button-identity1' do %>
     <i class="fa fa-search"></i>読まれている論文を探す
   <% end %>
   <%= link_to search_paper_lists_path, class: 'button search-paper-list flat-button-identity1' do %>
