--- a/app/assets/stylesheets/themes/papers.css.scss
+++ b/app/assets/stylesheets/themes/papers.css.scss
@@ -49,7 +49,7 @@
   .paper {
     background-color: $WHITE;
     border-top: 1px solid $GRAYCC;
-    .summary {
+    .summary, .papers-header {
       padding: 0 0 0 0;
       box-sizing: border-box;
       cursor: pointer;
@@ -66,6 +66,8 @@
       .favorite {
         float: left;
         padding: 0 5px 0 10px;
+        width: 25px;
+        height: 100%;
         i {
           font-size: 18px;
           line-height: 30px;
@@ -87,36 +89,32 @@
         width: 50px;
         height: 100%;
       }
-      .title {
+      .title, .authors, .published-date, .abstract {
         float: left;
-        max-width: 300px;
+        height: 100%;
         font-weight: 600;
         padding: 0 10px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
+      .title {
+        width: 300px;
+      }
       .authors {
-        float: left;
-        max-width: 200px;
-        overflow: hidden;
-        padding: 0 10px;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        width: 200px;
+      }
+      .published-date {
+        width: 80px;
       }
       .abstract {
-        float: left;
         width: 500px;
-        display: table-cell;
-        overflow: hidden;
-        padding: 0 10px;
-        text-overflow: ellipsis;
         color: $GRAY77;
-        white-space: nowrap;
       }
       .remove-paper {
         float: right;
         width: 25px;
+        height: 100%;
         i {
           font-size: 18px;
           line-height: 30px;
@@ -129,6 +127,15 @@
             }
           }
         }
+      }
+    }
+    .papers-header {
+      cursor: default;
+      &:hover {
+        background-color: $WHITE;
+      }
+      .abstract {
+        width: 50px;
       }
     }
     .detail {
