--- a/app/views/papers/_search_form.html.erb
+++ b/app/views/papers/_search_form.html.erb
@@ -1,6 +1,7 @@
 <div class='paper-search-form'>
   <div class='form-title'>抄読会.com内の論文を検索する</div>
   <%= form_tag papers_path, method: :get do %>
+    <%= hidden_field_tag :sort, params[:sort] %>
     <p>
       <%= text_field_tag :keyword, params[:keyword], class: 'keyword-input', placeholder: 'キーワード (pubmed id も可)' %>
     </p>
