--- a/app/views/paper_lists/_search_form.html.erb
+++ b/app/views/paper_lists/_search_form.html.erb
@@ -1,21 +1,18 @@
 <div class='paper-list-search-form'>
   <div class='form-title'>抄読会(論文リスト)を検索する</div>
+  ※公開されているリストのみが表示されます
   <%= form_tag search_paper_lists_path, method: :get do %>
     <%= hidden_field_tag :sort, params[:sort] %>
     <p>
-      <%= text_field_tag :keyword, params[:keyword], class: 'keyword-input', placeholder: 'キーワード (pubmed id も可)' %>
+      <%= text_field_tag :keyword, params[:keyword], class: 'keyword-input', placeholder: 'タイトル' %>
     </p>
     <p>
-      <%= label_tag :min_date, '出版年月日' %>
-      <%= date_field_tag :min_date, params[:min_date], class: 'mindate-input' %>
-      から
-      <%= date_field_tag :max_date, params[:max_date], class: 'maxdate-input' %>
+      <%= text_field_tag :username, params[:username], class: 'username-input', placeholder: 'リスト管理者のユーザー名またはメールアドレス' %>
     </p>
     <p>
-      <%= text_field_tag :author_name, params[:author_name], class: 'authorname-input', placeholder: '著者名' %>
-    </p>
-    <p>
-      <%= text_field_tag :journal_name, params[:journal_name], class: 'journalname-input', placeholder: '誌名' %>
+      <%= label_tag :category, 'リストの種類' %>
+      <%= select_tag :category, options_for_select([
+        ['すべて', :general], ['お気に入り', :favorite], ['読んだ論文', :read]], params[:category]), class: 'category-input' %>
       <%= submit_tag "検索する", name: nil, class: 'submit-btn flat-button-identity2', data: {disable_with: '検索中...'} %>
     </p>
   <% end %>
