--- a/app/views/papers/_papers.html.erb
+++ b/app/views/papers/_papers.html.erb
@@ -1,7 +1,7 @@
 <h1 class='papers-title'><%= title %></h1>
 <div class='papers'>
   <% if !(papers.length == 0) %>
-    <%= render 'papers/papers_header' %>
+    <%= render 'papers/papers_header' if defined?(has_header) && has_header %>
     <% papers.each do |p| %>
       <%= render 'papers/paper', paper: p, user: user %>
     <% end %>
