--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -1,3 +1,3 @@
 <%= render 'papers/search_form' %>
-<%= render 'papers/papers', papers: @papers, title: @title, user: current_user %>
+<%= render 'papers/papers', papers: @papers, title: @title, user: current_user, has_header: true %>
 <%= paginate @papers %>
