--- a/app/assets/stylesheets/themes/papers.css.scss
+++ b/app/assets/stylesheets/themes/papers.css.scss
@@ -34,10 +34,10 @@
 }
 
 .papers-title {
-  font-family: serif;
-  font-size: 24px;
-  color: $GRAY99;
-  padding: 0 20px;
+  font-size: 20px;
+  font-weight: 400;
+  color: $GRAY66;
+  padding: 5px 20px 0;
 }
 
 .papers {
