--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -63,10 +63,10 @@
 }
 
 .paper-lists-title {
-  font-family: serif;
   font-size: 20px;
-  color: $GRAY99;
-  padding: 0 20px;
+  font-weight: 400;
+  color: $GRAY66;
+  padding: 5px 20px 0;
 }
 
 .paper-lists {
