機能いろいろ追加

--- a/app/assets/stylesheets/themes/auth.css.scss
+++ b/app/assets/stylesheets/themes/auth.css.scss
@@ -4,8 +4,9 @@
 .auth-container {
   height: 100%;
   width: 100%;
+  padding: 20px 0;
   .form-container {
-    margin: 20px auto;
+    margin: 0 auto;
     width: 360px;
     height: 800px;
     .form-inner {
