--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,2 @@
-<%= render 'papers/papers', title: @title, papers: @papers, user: current_user %>
+<%= render 'papers/papers', title: @ranking_title, papers: @ranking_papers, user: current_user, not_found: 'ランキングがありません' %>
+<%= render 'papers/papers', title: @favorite_title, papers: @favorite_papers, user: current_user, not_found: 'お気に入りがありません' %>
