--- a/app/views/sidebar/_main.html.erb
+++ b/app/views/sidebar/_main.html.erb
@@ -2,4 +2,5 @@
   <%= render 'layouts/identity' %>
   <%= render 'sidebar/user_info' %>
   <%= render 'sidebar/menu' %>
+  <%= render 'sidebar/mini_search' %>
 </div>
