--- a/app/views/papers/_papers.html.erb
+++ b/app/views/papers/_papers.html.erb
@@ -7,6 +7,6 @@
     <% end %>
     <div class='end-line'></div>
   <% else %>
-    <p>お探しの論文は見つかりませんでした</p>
+    <p><%= (defined?(not_found) && not_found) || 'お探しの論文は見つかりませんでした' %></p>
   <% end %>
 </div>
