--- a/app/views/papers/_papers_header.html.erb
+++ b/app/views/papers/_papers_header.html.erb
@@ -1,6 +1,8 @@
 <div class='paper'>
   <div class='papers-header'>
     <div class='favorite'>
+      <i class='fa fa-chevron-up'></i>
+      <i class='fa fa-chevron-down'></i>
     </div>
     <div class='popularity'>
       <i class='fa fa-chevron-up'></i>
@@ -11,16 +13,16 @@
       <i class='fa fa-chevron-up'></i>
       <i class='fa fa-chevron-down'></i>
     </div>
-    <div class='authors'>
-      著者
+    <div class='journal'>
+      誌名
     </div>
     <div class='published-date'>
       出版日
       <i class='fa fa-chevron-up'></i>
       <i class='fa fa-chevron-down'></i>
     </div>
-    <div class='abstract'>
-      摘要
+    <div class='authors'>
+      著者
     </div>
   </div>
 </div>
