--- a/app/views/paper_lists/show.html.erb
+++ b/app/views/paper_lists/show.html.erb
@@ -1,1 +1,1 @@
-<%= render 'paper_lists/paper_list_detail', paper_list: @paper_list, user: current_user %>
+<%= render 'paper_lists/paper_list_detail', paper_list: @paper_list, papers: @papers, user: current_user %>
