バグ取り等

--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -176,7 +176,7 @@
       font-weight: 600;
       padding-right: 20px;
     }
-    .created-at, .updated-at {
+    .owner, .created-at, .updated-at {
       display: inline-block;
       padding-right: 20px;
     }
