--- a/app/views/paper_lists/_paper_lists.html.erb
+++ b/app/views/paper_lists/_paper_lists.html.erb
@@ -22,13 +22,16 @@
       <div class='count'>
         論文数：<%= paper_list.papers.count %>件
       </div>
+
       <% if paper_list.user.id == user.id && paper_list.general? %>
         <%= link_to '削除', paper_list_path(id: paper_list.id),
                                    method: :delete,
                                    class: 'destroy-btn flat-button-red',
                                    data: {confirm: '本当に削除してもよろしいですか？'} %>
       <% end %>
-      <%= link_to '編集', edit_paper_list_path(id: paper_list.id), class: 'edit-btn flat-button-normal' %>
+      <% if editable?(paper_list, user) %>
+        <%= link_to '編集', edit_paper_list_path(id: paper_list.id), class: 'edit-btn flat-button-normal' %>
+      <% end %>
     </div>
   <% end %>
 </div>
