--- a/app/assets/stylesheets/themes/papers.css.scss
+++ b/app/assets/stylesheets/themes/papers.css.scss
@@ -90,7 +90,7 @@
         width: 50px;
         height: 100%;
       }
-      .title, .authors, .published-date, .journal {
+      .title, .read-date, .authors, .published-date, .journal {
         float: left;
         height: 100%;
         padding: 0 10px;
@@ -101,6 +101,11 @@
       .title {
         width: 300px;
         font-weight: 600;
+      }
+      .read-date {
+        width: 100px;
+        font-weight: 600;
+        color: darken($IDENTITY_COLOR, 20);
       }
       .journal {
         width: 150px;
@@ -137,6 +142,9 @@
       }
       .authors, .journal {
         font-weight: 600;
+      }
+      .read-date {
+        color: $TEXTCOLOR;
       }
       i {
         font-size: 13px !important;
@@ -218,7 +226,7 @@
           padding: 10px;
           .target-paper-list {
             font-size: 16px;
-            min-width: 200px;
+            min-width: 300px;
           }
           .add-paper-btn {
             padding: 2px 10px;
