--- a/app/assets/stylesheets/themes/auth.css.scss
+++ b/app/assets/stylesheets/themes/auth.css.scss
@@ -4,11 +4,11 @@
 .auth-container {
   height: 100%;
   width: 100%;
-  padding: 20px 0;
+  padding: 0;
   .form-container {
     margin: 0 auto;
+    padding: 20px 0;
     width: 360px;
-    height: 800px;
     .form-inner {
       padding: 20px;
       background-color: $WHITE;
