--- a/app/views/sidebar/_user_info.html.erb
+++ b/app/views/sidebar/_user_info.html.erb
@@ -2,6 +2,7 @@
   <% if user_signed_in? %>
     <span class='email'><%= current_user.display_name %> さん、ようこそ</span>
     <%= link_to 'プロフィール変更', edit_user_registration_path %>
+    <%= link_to '閲覧履歴', paper_list_path(id: current_user.history_list.id) %>
     <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
   <% end %>
 </div>
