--- a/app/views/paper_lists/_paper_list_detail.html.erb
+++ b/app/views/paper_lists/_paper_list_detail.html.erb
@@ -55,7 +55,7 @@
     <% if !(papers.count == 0) %>
       <div class='end-line'></div>
     <% else %>
-      <p class='attention'>論文が登録されていません</p>
+      <p class='attention'><%= paper_list.history? ? '閲覧履歴がありません' : '論文が登録されていません' %></p>
     <% end %>
   </div>
 
