要望。　見た目修正

--- a/app/assets/stylesheets/themes/paper_lists.css.scss
+++ b/app/assets/stylesheets/themes/paper_lists.css.scss
@@ -69,6 +69,11 @@
   padding: 5px 20px 0;
 }
 
+.register-paper {
+  margin: 10px 20px 0 0;
+  float: right;
+}
+
 .paper-lists {
   padding: 20px;
   .single-paper-list {
