--- a/app/assets/stylesheets/themes/papers.css.scss
+++ b/app/assets/stylesheets/themes/papers.css.scss
@@ -90,7 +90,7 @@
         width: 50px;
         height: 100%;
       }
-      .title, .read-date, .authors, .published-date, .journal {
+      .title, .read-date, .comment, .authors, .published-date, .journal {
         float: left;
         height: 100%;
         padding: 0 10px;
@@ -106,6 +106,9 @@
         width: 100px;
         font-weight: 600;
         color: darken($IDENTITY_COLOR, 20);
+      }
+      .comment {
+        width: 100px;
       }
       .journal {
         width: 150px;
@@ -140,7 +143,7 @@
       &:hover {
         background-color: $WHITE;
       }
-      .authors, .journal {
+      .authors, .journal, .comment {
         font-weight: 600;
       }
       .read-date {
