--- a/app/views/paper_lists/_paper_list_detail.html.erb
+++ b/app/views/paper_lists/_paper_list_detail.html.erb
@@ -48,9 +48,9 @@
     <% end %>
   </div>
   <div class='papers' data-paper-list-id='<%= paper_list.id %>'>
-    <%= render 'papers/papers_header', has_read_date: has_read_date if !(papers.count == 0) %>
+    <%= render 'papers/papers_header', has_read_date: has_read_date, has_comment: has_comment if !(papers.count == 0) %>
     <% papers.each do |p| %>
-      <%= render 'papers/paper', paper: p, user: user, paper_list: paper_list, has_read_date: has_read_date %>
+      <%= render 'papers/paper', paper: p, user: user, paper_list: paper_list, has_read_date: has_read_date, has_comment: has_comment %>
     <% end %>
     <% if !(papers.count == 0) %>
       <div class='end-line'></div>
