--- a/app/views/paper_lists/index.html.erb
+++ b/app/views/paper_lists/index.html.erb
@@ -1,1 +1,9 @@
-<%= render 'paper_lists/paper_lists', user: current_user, paper_lists: @paper_lists, title: @title %>
+<%= link_to new_paper_list_path, class: 'button register-paper flat-button-identity1' do %>
+  <i class="fa fa-file-text-o"></i>新規リスト作成
+<% end %>
+<%= render 'paper_lists/paper_lists', user: current_user, paper_lists: @own_paper_lists, title: @own_paper_lists_title %>
+
+<%= link_to shared_new_paper_lists_path, class: 'button register-paper flat-button-identity' do %>
+  <i class="fa fa-file-text"></i>抄読会をつくる
+<% end %>
+<%= render 'paper_lists/paper_lists', user: current_user, paper_lists: @shared_paper_lists, title: @shared_paper_lists_title, not_found: '抄読会がありません' %>
