--- a/app/views/sidebar/_menu.html.erb
+++ b/app/views/sidebar/_menu.html.erb
@@ -1,20 +1,11 @@
 <div class='menu'>
   <%= link_to paper_lists_path, class: 'button favorite-paper flat-button-identity2' do %>
-    <i class="fa fa-list"></i>マイ抄読会(論文リスト)一覧
-  <% end %>
-  <%= link_to papers_path, class: 'button search-paper flat-button-identity1' do %>
-    <i class="fa fa-search"></i>読まれている論文を探す
+    <i class="fa fa-list"></i>個人論文一覧
   <% end %>
   <%= link_to search_paper_lists_path, class: 'button search-paper-list flat-button-identity1' do %>
-    <i class="fa fa-search-plus"></i>公開抄読会(論文リスト)を探す
+    <i class="fa fa-search-plus"></i>公開抄読会一覧
   <% end %>
   <%= link_to api_search_papers_path, class: 'button register-paper flat-button-identity' do %>
-    <i class="fa fa-plus"></i>読んだ論文を登録する
-  <% end %>
-  <%= link_to new_paper_list_path, class: 'button register-paper flat-button-identity' do %>
-    <i class="fa fa-file-text-o"></i>論文リストをつくる
-  <% end %>
-  <%= link_to shared_new_paper_lists_path, class: 'button register-paper flat-button-identity' do %>
-    <i class="fa fa-file-text"></i>抄読会をつくる
+    <i class="fa fa-plus"></i>論文登録
   <% end %>
 </div>
